# RoboClaw

./: .env.example  .gitignore  .gitmodules  Makefile  README.md  pyproject.toml
skills/eap-data-collection/: SKILL.md
skills/eap-data-collection/agents/: openai.yaml
skills/eap-data-collection/references/: data-collection-guardrails.md  eap-prompt-pairs.md
skills/long-horizon-execution/: SKILL.md
skills/long-horizon-execution/agents/: openai.yaml
skills/long-horizon-execution/references/: paper-vanity-four-tasks-spec.md  subtask-plan-template.md
skills/monitored-subtask-execution/: SKILL.md
skills/monitored-subtask-execution/agents/: openai.yaml
skills/monitored-subtask-execution/references/: mcp-tool-map.md
src/agent_demo/agent_layer/agent_components/: __init__.py
src/agent_demo/agent_layer/agent_core/: __init__.py
src/agent_demo/agent_layer/agent_prompt/: __init__.py  references_loader.py
src/agent_demo/common/: assistant_output.py  codex_openai_config.py  img_loader.py  json_loader.py  project_env.py  response_formatter.py  root_logger.py  test_task_loader.py  yaml_loader.py
src/agent_demo/common/msg_center/: __init__.py  udp_dispatcher.py  udp_receiver.py
src/agent_demo/config/: ormcp_services.json  project_openai_defaults.json
src/agent_demo/interaction_layer/: auto_inference_prompt.py  feishu_bot.py  feishu_long_connection.py  local_skill_support.py
src/agent_demo/interaction_layer/cmd/: olympus_cmd.py  olympus_img_cmd.py
src/agent_demo/interaction_layer/gradio_ui/: gradio_ui.py
src/agent_demo/interaction_layer/tui/: olympus_tui.py
src/agent_demo/machine_layer/: base_dataloader.py  dataloader_a2d.py  dataloader_corobot.py
src/agent_demo/session_layer/: session_manager.py
src/agent_demo/session_layer/base_session/: base_session.py
src/agent_demo/session_layer/intention_classification/: intention_classification.py
src/agent_demo/types/agent_types/: __init__.py
src/agent_demo/types/interaction_types/: __init__.py  interaction_package.py
src/agent_demo/types/machine_layer/: __init__.py  a2d_data.py
src/agent_demo/types/session_types/: __init__.py  (+1 more)
src/mcp_server_demo/corobot_mcp_server/: README.md  pyproject.toml
src/mcp_server_demo/corobot_mcp_server/src/: __init__.py  server.py
src/mcp_server_demo/data_analyst_mcp_server/: README.md  pyproject.toml  test_analyzer.py
src/mcp_server_demo/data_analyst_mcp_server/src/: server.py
(+33 files in other folders)
