[build-system]
requires = ["setuptools>=69", "wheel"]

[project]
name = "mcp-client-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.6.0",
    "openai>=1.74.0",
    "pre-commit>=4.2.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "socksio>=1.0.0",
    "uvicorn>=0.34.1",
    "ruff>=0.11.5",
    "black>=25.1.0",
    "tiktoken>=0.9.0",
    "rich>=14.0.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "opencv-python>=4.11.0.86",
    "aioconsole>=0.8.1",
    "scipy>=1.15.3",
    "gradio>=5.32.0",
    "openai-whisper>=20240930",
    "loguru>=0.7",
    "pydantic>=2.5",
    "websockets>=11,<13",
    "lark-oapi>=1.2.10",
    "msgpack>=1.0",
    "zstandard>=0.22",
    "PyYAML>=6.0",
    "httpx>=0.28.0",
    "protobuf==5.28.3",
    "plotly>=6.5.2",
]

[tool.black]
line-length = 120 # 行长度优化 (默认88 → 更现代化)
skip-string-normalization = true # 保留原始引号风格 (避免无意义的引号转换)
target-version = ["py310"] # 指定目标 Python 版本
preview = true # 强制多行表达式尾部逗号 (优化 git diff)

[tool.ruff]
include = ["*.py"]

[tool.ruff.lint.per-file-ignores]
"tests/mcp_client_demo/*.py" = ["ALL"] # 对UT代码质量不做管控

[tool.uv.extra-build-dependencies]
openai-whisper = ["setuptools<81"]
