[project]
name = "data-analyst-mcp-server"
version = "0.1.0"
description = "MCP server for LeRobot dataset analysis with t-SNE visualization"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pyarrow>=17.0.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "plotly>=5.18.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "torch>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
data-analyst-mcp = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
